# windows-ui-composition-stuff

./: Cargo.toml  app.manifest  build.rs  readme.md
src/: composition_host.rs  main.rs  window.rs
src/interface/: mod.rs
src/kit/: attribute.rs  debug.rs  layout.rs  math.rs  mod.rs  node.rs  renderer.rs  sway_renderer.rs  tree.rs
src/kit/nodes/: div.rs  mod.rs  text.rs
