[package]
name = "windows-ui-composition"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.8.1"
rand = "0.9.2"
windows = { version = "0.62.2", features = [
  "System",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Composition",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "UI_Composition",
  "UI_Composition_Desktop",
  "UI_Text",
  "UI_Input"
] }
windows-numerics = "0.3.1"
